[gd_scene load_steps=4 format=3 uid="uid://bf0scv8y2eu8o"]

[ext_resource type="Script" path="res://scripts/window.gd" id="1_3e1ny"]
[ext_resource type="PackedScene" uid="uid://rirvgn48lwcn" path="res://scenes/smaller parts/window_section.tscn" id="2_8snh0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kvv7r"]
size = Vector3(3.61737, 1, 2.58875)

[node name="Window" type="Node3D"]
script = ExtResource("1_3e1ny")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0275984, -1.13328, 1.53697)
shape = SubResource("BoxShape3D_kvv7r")

[node name="break_open_delay" type="Timer" parent="."]
one_shot = true

[node name="window_piece_manager" type="Node3D" parent="."]

[node name="WindowSection2" parent="window_piece_manager" instance=ExtResource("2_8snh0")]
transform = Transform3D(1.80216, -2.42703e-07, 8.74228e-08, -1.5755e-07, -2.7762, -7.64274e-15, 1.5755e-07, 0, -1, -1.80194, 0.688136, 0)

[node name="WindowSection" parent="window_piece_manager" instance=ExtResource("2_8snh0")]
transform = Transform3D(-1.80216, -2.42703e-07, 0, -1.5755e-07, 2.7762, 8.74228e-08, -1.37735e-14, 2.42703e-07, -1, 1.81047, 0.688136, 0)

[connection signal="body_shape_entered" from="Area3D" to="." method="_on_area_3d_body_shape_entered"]
[connection signal="timeout" from="break_open_delay" to="." method="_on_break_open_delay_timeout"]
